--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/sidepanel.css">
     <title>CatTube</title>
 </head>
 
@@ -49,8 +50,14 @@
         </div>
 
     </header>
-    <div class="shadow"></div>
+    
+<main>
+    <div>
+        <div class="side-panel">sdfd</div>
 
+    </div>
+</main>
+<footer></footer>
 
 </body>
 
